zxx_cncamp/golang/module12/http-network.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.cncamp.io
  http:
  - match:
    - uri:
        exact: "/cncamp/httpserver"
    rewrite:
      uri: "/httpserver"
    route:
      - destination:
          host: httpserver.securesvc.svc.cluster.local
          port:
            number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
